--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+click==7.1.2
 cycler==0.10.0
+Flask==1.1.2
 gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
 kiwisolver==1.2.0
+MarkupSafe==1.1.1
 matplotlib==3.2.1
 missingno==0.4.2
 numpy==1.18.5
@@ -11,3 +16,4 @@ pytz==2020.1
 scipy==1.4.1
 seaborn==0.10.1
 six==1.15.0
+Werkzeug==1.0.1
